[tool.poetry]
name = "airbnb-athens-analysis"
version = "0.1.0"
description = ""
authors = ["nickkatsios <t8200071@aueb.gr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
folium = "^0.14.0"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
